# action_server

./: .gitmodules  .pylintrc  .travis.yml  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: main.yml
action/: Task.action
action_server/: CMakeLists.txt  package.xml  setup.py
action_server/scripts/: main.py
action_server/src/action_server/: __init__.py  action_factory.py  client.py  main.py  server.py  task_manager.py  test_tools.py
action_server/src/action_server/actions/: __init__.py  action.py  answer_question.py  arm_goal.py  bring.py  clear.py  clear_table.py  count_and_tell.py  count_object_on_location.py  demo_presentation.py  entity_description.py  example_action.py  find.py  follow.py  gripper_goal.py  guide.py  guide_final_challenge.py  hand_over.py  inspect_action.py  look_at.py  navigate_to.py  open_door.py  pick_up.py  place.py  point_detect.py  point_target.py  reset_wm.py  say.py  send_picture.py  show_openpose.py  tell_name_of_person.py  turn_toward_sound.py
action_server/src/action_server/actions/util/: __init__.py  entities_from_description.py
action_server/test/: test_actions.py  test_grammar_test.py  test_import.py
action_server_msgs/: CMakeLists.txt  package.xml
action_server_msgs/action/: Task.action
clients/: speech_client.py
components/: navigate_to.cpp  navigate_to.h  pick_up.cpp  pick_up.h
components/manipulation/: amigo_joint_trajectory_client.cpp  amigo_joint_trajectory_client.h  joint_trajectory.cpp  joint_trajectory.h
doc/: action_server_architecture.dia
examples/: example.cpp  simple_action.cpp  simple_action.h  simple_action_factory.cpp  simple_action_factory.h
include/action_server/: action.h  action_factory.h  server.h  types.h  uuid.h
src/: action.cpp  action_factory.cpp  main.cpp  server.cpp  uuid.cpp
src/action_server/: __init__.py  action_factory.py  client.py  main.py  server.py  task_manager.py
src/action_server/actions/: __init__.py  action.py  answer_question.py  arm_goal.py  bring.py  demo_presentation.py  entity_description.py  find.py  find_out_and_report.py  follow.py  gripper_goal.py  inspect.py  look_at.py  navigate_to.py  pick_up.py  place.py  reset_wm.py  say.py  turn_toward_sound.py
src/action_server/actions/util/: __init__.py  entities_from_description.py
src/action_server/command_center/: README.md  __init__.py  actions.py  command_center.py  command_recognizer.py  find_person.py  in_room.py
srv/: AddAction.srv  GetActionStatus.srv  GetActions.srv  RegisterActionServer.srv
