<?xml version="1.0"?>
<package format="3">
  <name>action_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rokusottervanger@gmail.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>action_server_msgs</exec_depend>
  <exec_depend>grammar_parser</exec_depend>
  <exec_depend>python-nose</exec_depend>
  <exec_depend>robocup_knowledge</exec_depend>
  <exec_depend>robot_skills</exec_depend>
  <exec_depend>robot_smach_states</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>challenge_presentation</exec_depend>

  <test_depend>ed_msgs</test_depend>

  <doc_depend>python-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
