<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rokusottervanger@gmail.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>action_server_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>challenge_presentation</exec_depend>
  <exec_depend>ed_python</exec_depend>
  <exec_depend>grammar_parser</exec_depend>
  <exec_depend>pykdl_ros</exec_depend>
  <exec_depend>python3-nose</exec_depend>
  <exec_depend>robocup_knowledge</exec_depend>
  <exec_depend>robot_skills</exec_depend>
  <exec_depend>robot_smach_states</exec_depend>

  <test_depend>ed_msgs</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
