<?xml version="1.0"?>
<package>
  <name>action_server_msgs</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rokusottervanger@github.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>

  <build_depend>ed_object_models</build_depend>
  <run_depend>ed_object_models</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>tue_config</build_depend>
  <run_depend>tue_config</run_depend>

  <build_depend>cb_planner_msgs_srvs</build_depend>
  <run_depend>cb_planner_msgs_srvs</run_depend>

  <build_depend>grammar_parser</build_depend>
  <run_depend>grammar_parser</run_depend>

  <build_depend>robot_skills</build_depend>
  <run_depend>robot_skills</run_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
