<?xml version="1.0"?>
<package format="2">
  <name>action_server_msgs</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="rokusottervanger@github.com">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

</package>
